# TazGraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TazGraph.sln  devGuide.dox  testPage.dox
TazGraph/: BaseGraph.cpp  BaseGraph.h  CMakeLists.txt  ConsoleLogger.h  GLTexture.h  MainGraph.cpp  MainGraph.h  TazGraph.vcxproj  TazGraph.vcxproj.filters  Vertex.h  imgui.ini  main.cpp
TazGraph/AssetManager/: AssetManager.cpp  AssetManager.h
TazGraph/BaseFPSLimiter/: BaseFPSLimiter.cpp  BaseFPSLimiter.h
TazGraph/ConsoleLogger/: ConsoleLogger.cpp  ConsoleLogger.h
TazGraph/GLSLProgram/: GLSLProgram.cpp  GLSLProgram.h
TazGraph/GraphSystem/: GraphSystem.h  Link.h  Node.h
TazGraph/Shaders/: colorShading.frag  colorShading.vert
TazGraph/Src/: Game.cpp  Game.h  Graph.cpp  Graph.h  ShapeManager.h  main.cpp
TazGraph/Src/App/: App.cpp  App.h
TazGraph/Src/AssetManager/: AssetManager.cpp  AssetManager.h
TazGraph/Src/Collision/: Collision.cpp  Collision.h
TazGraph/Src/ECS/: ScriptComponents.h
TazGraph/Src/ECS/Scripts/: HPBar.h  MainMenuBackground.h  ScoreComponent.h
TazGraph/Src/EditorIMGUI/: EditorIMGUI.cpp  EditorIMGUI.h  EditorLayoutUtils.cpp  EditorLayoutUtils.h
TazGraph/Src/EditorIMGUI/CustomFunctions/: CustomFunctions.cpp  CustomFunctions.h
TazGraph/Src/EditorIMGUI/Minimap/: Minimap.cpp  Minimap.h
TazGraph/Src/GECS/: ScriptComponents.h
TazGraph/Src/GECS/Scripts/: MainMenuBackground.h
TazGraph/Src/GOS/Scripts/: MainMenuBackground.h  ScoreComponent.h
TazGraph/Src/MainMenuScreen/: MainMenuScreen.cpp  MainMenuScreen.h
TazGraph/Src/Map/: Map.cpp  Map.h
TazGraph/Src/Map/Parsers/: DOTMapParser.cpp  DOTMapParser.h  GraphMLMapParser.cpp  GraphMLMapParser.h  IMapParser.h  PythonMapParser.cpp  PythonMapParser.h  TextMapParser.cpp  TextMapParser.h
TazGraph/Src/Shaders/: circleColorShading.frag  circleColorShading.vert  colorLighting.frag  colorLighting.vert  colorShading.frag  colorShading.vert  framebuffer.frag  framebuffer.vert  lightShading.frag  lightShading.vert  lineColorShading.frag  lineColorShading.gs  lineColorShading.vert  textureBright.frag  textureBright.vert  textureShading.frag  textureShading.vert
TazGraph/Window/: Window.cpp  Window.h
TazGraph/assets/Maps/: RandomBackground.csv  RandomMap.csv  dotTest.dot  dummy_graph.txt  map_v3_Tile_Layer.csv  simple3D_test.txt  small.graphml  test1.txt  test_links.txt  test_medium.txt  test_medium_save.txt  test_simasdasd.txt  test_simple.txt
TazGraph/assets/Maps/Polling/: newNodeCreate.txt
TazGraph/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot_items.cpp
TazGraphEngine/: CMakeLists.txt  ConsoleLogger.h  GLSLProgram.h  PNG_Letters.h  TazGraphEngine.vcxproj  TazGraphEngine.vcxproj.filters  Vertex.h
TazGraphEngine/AABB/: AABB.h
TazGraphEngine/AudioEngine/: AudioEngine.cpp  AudioEngine.h
TazGraphEngine/BaseFPSLimiter/: BaseFPSLimiter.cpp  BaseFPSLimiter.h
TazGraphEngine/Camera2.5D/: CameraManager.h  ICamera.h  OrthoCamera.h  PerspectiveCamera.h
TazGraphEngine/DataManager/: DataManager.h
TazGraphEngine/DebugRenderer/: DebugRenderer.cpp  DebugRenderer.h
TazGraphEngine/ECS/: ButtonComponent.h  ColliderComponent.h  Components.h  ECS.h  ECSManager.h  KeyboardControllerComponent.h  LightComponent.h  Rectangle_w_Color.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
TazGraphEngine/ECS/Animators/: AnimatorComponent.h  FlashAnimation.h  FlashAnimatorComponent.h  MovingAnimatorComponent.h
TazGraphEngine/GECS/: Components.h  GECS.cpp  GECS.h  GECSEntityTypes.h  GECSManager.cpp  GECSManager.h  UtilComponents.h
TazGraphEngine/GECS/Animators/: Animation.h  AnimatorComponent.h  AnimatorManager.h  FlashAnimation.h  FlashAnimatorComponent.h  MovingAnimation.h  MovingAnimatorComponent.h
TazGraphEngine/GECS/Animators/LineAnimators/: LineFlashAnimatorComponent.h
TazGraphEngine/GECS/Components/Basic/: Box_w_Color.h  (+6 more)
TazGraphEngine/GECS/Core/: CellEntity.h  GECS.cpp  GECS.h  GECSEntity.h  GECSEntityTypes.h  GECSManager.cpp  GECSManager.h  GECSUtil.h  GridEntity.h
TazGraphEngine/GOS/: ButtonComponent.h  ColliderComponent.h  Components.h  GOS.cpp  GOS.h  GOSEntityTypes.h  GOSManager.h  KeyboardControllerComponent.h  LightTextureComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
TazGraphEngine/GOS/Animators/: Animation.h  AnimatorComponent.h  FlashAnimation.h  FlashAnimatorComponent.h  MovingAnimatorComponent.h
TazGraphEngine/GameScreen/: IGameScreen.cpp  IMainGame.cpp  ScreenIndices.h  ScreenList.h
TazGraphEngine/GraphScreen/: AppInterface.cpp  AppInterface.h  IGraphScreen.cpp  IGraphScreen.h  IMainGraph.cpp  IMainGraph.h  IScene.cpp  IScene.h  SceneList.cpp  SceneList.h  ScreenIndices.h  ScreenList.cpp  ScreenList.h
TazGraphEngine/Grid/: Grid.cpp  Grid.h
TazGraphEngine/ImGuiInterface/: ImGuiInterface.cpp  ImGuiInterface.h
TazGraphEngine/InputManager/: InputManager.cpp  InputManager.h
TazGraphEngine/JsonParser/: JsonParser.h
TazGraphEngine/Renderers/FrameBuffer/: Framebuffer.cpp  Framebuffer.h
TazGraphEngine/Renderers/LightRenderer/: LightRenderer.cpp  LightRenderer.h
TazGraphEngine/Renderers/LineRenderer/: LineRenderer.cpp  LineRenderer.h
TazGraphEngine/Renderers/PlaneColorRenderer/: PlaneColorRenderer.cpp  PlaneColorRenderer.h
TazGraphEngine/Renderers/PlaneModelRenderer/: PlaneModelRenderer.cpp  PlaneModelRenderer.h
TazGraphEngine/Renderers/PlaneRenderers/: PlaneRenderer.cpp  PlaneRenderer.h
TazGraphEngine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
TazGraphEngine/SceneManager/: SceneManager.h
TazGraphEngine/SpriteBatch/: SpriteBatch.h
TazGraphEngine/TextureManager/: TextureManager.cpp  TextureManager.h
TazGraphEngine/Threader/: Threader.h
TazGraphEngine/Timing/: Timing.cpp  Timing.h
TazGraphEngine/Window/: Window.cpp  Window.h
TazGraphEngine/imgui/: imgui.cpp  imgui_combo_autoselect.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_tables.cpp  imgui_widgets.cpp
(+1974 files in other folders)
